===============================================================================
Preliminary notes:
------------------
Mark "o": new feature
Mark "*": bug fixed.
Mark "!": change that can break compatibility with older version of the library
===============================================================================

o [Compilation] native dynlink of calendarLib is possible with ocaml>=3.11
  (patch of Mehdi Dogguy)
* [Compilation] bug fixed under Cygwin
o [Date] new functions Date.make_year and Date.make_year_month
o [Date] improve memory representation of Date.Period.t
* [Compilation] META files was incorrect, so "ocamlfind ocamlopt" did not work
* [Compilation] file date_sig.mli, time_sig.mli and calendar_sig.mli was not 
  properly linked

version 2.01.1, 2009-02-23:
=========================
* [Date] add a missing coercion rule for months
  (e.g. "Date.make 2008 18 1" is now equal to "Date.make 2009 6 1")
* [Date] bug fixed in date arithmetic operations due to the missing above 
  feature

version 2.01, 2009-01-26:
=========================
o [Printer] new formats available for printers and parsers
    - %C  century: as %Y without the two last digits
    - %F  replace %i which is now deprecated
    - %P  am or pm
    - %R  shortcut for %H:%M
    - %s  number of seconds since 1970/1/1
    - %z  time zone in the form +hhmm (from Warren Harris' suggestion)
    - %:z  time zone in the form +hh:mm (from Warren Harris' suggestion)
    - %::z  time zone in the form +hh:mm:ss (from Warren Harris' suggestion)
    - %:::z  time zone in the form +hh (from Warren Harris' suggestion)
o [Printer] new paddings available for printers
    - 0 (zero): pad fields with zeroes like by default
    - ^: use uppercase if possible
o [Compilation] calendarLib.cma and calendarLib.cmxa are now installed 
  (Janne Hellsten and Guillaume Yziquel's suggestion)
* [Tests] test suite now uses Utils.Float.equal if required
  (patch of Richard Jones)